// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Seo component renders the base seo component properly 1`] = `
<NextSeo
  additionalLinkTags={
    [
      {
        "href": "/favicons/apple-icon-57x57.png",
        "rel": "apple-touch-icon",
        "sizes": "57x57",
      },
      {
        "href": "/favicons/apple-icon-60x60.png",
        "rel": "apple-touch-icon",
        "sizes": "60x60",
      },
      {
        "href": "/favicons/apple-icon-72x72.png",
        "rel": "apple-touch-icon",
        "sizes": "72x72",
      },
      {
        "href": "/favicons/apple-icon-76x76.png",
        "rel": "apple-touch-icon",
        "sizes": "76x76",
      },
      {
        "href": "/favicons/apple-icon-114x114.png",
        "rel": "apple-touch-icon",
        "sizes": "114x114",
      },
      {
        "href": "/favicons/apple-icon-120x120.png",
        "rel": "apple-touch-icon",
        "sizes": "120x120",
      },
      {
        "href": "/favicons/apple-icon-144x144.png",
        "rel": "apple-touch-icon",
        "sizes": "144x144",
      },
      {
        "href": "/favicons/apple-icon-152x152.png",
        "rel": "apple-touch-icon",
        "sizes": "152x152",
      },
      {
        "href": "/favicons/apple-icon-180x180.png",
        "rel": "apple-touch-icon",
        "sizes": "180x180",
      },
      {
        "href": "/favicons/android-icon-192x192.png",
        "rel": "icon",
        "sizes": "192x192",
      },
      {
        "href": "/favicons/manifest.json",
        "rel": "manifest",
      },
      {
        "href": "/favicons/favicon-16x16.png",
        "rel": "icon",
        "sizes": "16x16",
      },
      {
        "href": "/favicons/favicon-32x32.png",
        "rel": "icon",
        "sizes": "32x32",
      },
      {
        "href": "/favicons/favicon-96x96.png",
        "rel": "icon",
        "sizes": "96x96",
      },
      {
        "href": "/feeds/feed.xml",
        "rel": "alternate",
        "title": "RSS 2.0",
        "type": "application/rss+xml",
      },
      {
        "href": "/feeds/atom.xml",
        "rel": "alternate",
        "title": "Atom 1.0",
        "type": "application/atom+xml",
      },
      {
        "href": "/feeds/feeds.json",
        "rel": "alternate",
        "title": "JSON Feed",
        "type": "application/json",
      },
    ]
  }
  additionalMetaTags={
    [
      {
        "content": "#ffffff",
        "property": "msapplication-TileColor",
      },
      {
        "content": "/favicons/ms-icon-144x144.png",
        "property": "msapplication-TileImage",
      },
    ]
  }
  canonical=""
  description=""
  facebook={
    {
      "appId": "",
    }
  }
  nofollow={false}
  noindex={false}
  openGraph={
    {
      "description": "",
      "images": [
        {
          "url": "",
        },
      ],
      "siteName": "",
      "title": "Elegant Test App",
      "type": "website",
      "url": "",
    }
  }
  themeColor="#ffffff"
  title="Elegant Test App"
  twitter={
    {
      "cardType": "summary_large_image",
    }
  }
/>
`;

exports[`Seo component renders the non-base seo component properly 1`] = `
<NextSeo
  additionalLinkTags={
    [
      {
        "href": "/favicons/apple-icon-57x57.png",
        "rel": "apple-touch-icon",
        "sizes": "57x57",
      },
      {
        "href": "/favicons/apple-icon-60x60.png",
        "rel": "apple-touch-icon",
        "sizes": "60x60",
      },
      {
        "href": "/favicons/apple-icon-72x72.png",
        "rel": "apple-touch-icon",
        "sizes": "72x72",
      },
      {
        "href": "/favicons/apple-icon-76x76.png",
        "rel": "apple-touch-icon",
        "sizes": "76x76",
      },
      {
        "href": "/favicons/apple-icon-114x114.png",
        "rel": "apple-touch-icon",
        "sizes": "114x114",
      },
      {
        "href": "/favicons/apple-icon-120x120.png",
        "rel": "apple-touch-icon",
        "sizes": "120x120",
      },
      {
        "href": "/favicons/apple-icon-144x144.png",
        "rel": "apple-touch-icon",
        "sizes": "144x144",
      },
      {
        "href": "/favicons/apple-icon-152x152.png",
        "rel": "apple-touch-icon",
        "sizes": "152x152",
      },
      {
        "href": "/favicons/apple-icon-180x180.png",
        "rel": "apple-touch-icon",
        "sizes": "180x180",
      },
      {
        "href": "/favicons/android-icon-192x192.png",
        "rel": "icon",
        "sizes": "192x192",
      },
      {
        "href": "/favicons/manifest.json",
        "rel": "manifest",
      },
      {
        "href": "/favicons/favicon-16x16.png",
        "rel": "icon",
        "sizes": "16x16",
      },
      {
        "href": "/favicons/favicon-32x32.png",
        "rel": "icon",
        "sizes": "32x32",
      },
      {
        "href": "/favicons/favicon-96x96.png",
        "rel": "icon",
        "sizes": "96x96",
      },
      {
        "href": "/feeds/feed.xml",
        "rel": "alternate",
        "title": "RSS 2.0",
        "type": "application/rss+xml",
      },
      {
        "href": "/feeds/atom.xml",
        "rel": "alternate",
        "title": "Atom 1.0",
        "type": "application/atom+xml",
      },
      {
        "href": "/feeds/feeds.json",
        "rel": "alternate",
        "title": "JSON Feed",
        "type": "application/json",
      },
    ]
  }
  additionalMetaTags={
    [
      {
        "content": "#ffffff",
        "property": "msapplication-TileColor",
      },
      {
        "content": "/favicons/ms-icon-144x144.png",
        "property": "msapplication-TileImage",
      },
    ]
  }
  canonical=""
  description=""
  facebook={
    {
      "appId": "",
    }
  }
  nofollow={false}
  noindex={false}
  openGraph={
    {
      "description": "",
      "images": [
        {
          "url": "",
        },
      ],
      "siteName": "",
      "title": "Elegant Test App numbero 2",
      "type": "website",
      "url": "",
    }
  }
  themeColor="#ffffff"
  title="Elegant Test App numbero 2"
  twitter={
    {
      "cardType": "summary_large_image",
    }
  }
/>
`;
